force-app/main/default/objects/Rent_Transaction__c/Rent_Transaction__c.object-meta.xml
<CustomObject>
    <label>Rent Transaction</label>
    <nameField>
        <displayFormat>RENT-{00000}</displayFormat>
        <label>Rent Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rent Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>