force-app/main/default/objects/Rent_Transaction__c/fields/Household_Income_M_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Household_Income_M_Occupants__c</fullName>
    <label>Household Income(M): Occupants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>