force-app/main/default/objects/Rent_Transaction__c/fields/Housing_Market_Rent__c.field-meta.xml
<CustomField>
    <fullName>Housing_Market_Rent__c</fullName>
    <label>Housing Market Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>