force-app/main/default/objects/Rent_Transaction__c/fields/Housing_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Housing_Rent_Amount__c</fullName>
    <label>Housing Rent Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>