force-app/main/default/objects/Rent_Transaction__c/fields/Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>