force-app/main/default/objects/Rent_Transaction__c/fields/Is_Last_Month_Rent__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Month_Rent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Month Rent</label>
    <type>Checkbox</type>
</CustomField>