force-app/main/default/objects/Rent_Transaction__c/fields/Is_Prorate__c.field-meta.xml
<CustomField>
    <fullName>Is_Prorate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prorate</label>
    <type>Checkbox</type>
</CustomField>