force-app/main/default/objects/Rent_Transaction__c/fields/Parking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parking_Amount__c</fullName>
    <label>Parking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>