force-app/main/default/objects/Rent_Transaction__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Rent Transactions</relationshipLabel>
    <relationshipName>Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>