force-app/main/default/objects/Rent_Transaction__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment</label>
    <referenceTo>ProgramEnrollment</referenceTo>
    <relationshipLabel>Rent Transactions</relationshipLabel>
    <relationshipName>Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>