force-app/main/default/objects/Rent_Transaction__c/fields/Total_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Amount__c</fullName>
    <formula>Housing_Rent_Amount__c  +  Parking_Amount__c  +  Property_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>