force-app/main/default/objects/Rent_Transaction__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Rent Transactions</relationshipLabel>
    <relationshipName>Rent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>