force-app/main/default/objects/Rent_Transaction__c/fields/Utility_Charge_or_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Utility_Charge_or_Allowance__c</fullName>
    <label>Utility Charge (+) or Allowance (-)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>